--- a/_posts/2023-03-23-geisha.markdown
+++ b/_posts/2023-03-23-geisha.markdown
@@ -55,13 +55,27 @@ _Game Over ... thank god!_
 
 ### My Playthrough
 
-|*How Long To Beat?*|30 minutes?|
+|*How Long To Beat?*|30-45 minutes|
 |*Version Played*|Atari ST via [ScummVM](https://www.scummvm.org/)|
 |*Notes*|[Walkthrough](https://www.walkthroughking.com/text/geisha.aspx)|
 
 ### Score
 
 See [here](https://www.alexbevi.com/blog/2021/07/28/adventure-games-1980-1999/#scoring) for a refresher on how we're scoring these games.
+
+|**Graphics (10)**|2|
+|**Sound (10)**|1|
+|**Plot / Progression (25)**|2|
+|**Characters / Development (15)**|0|
+|**Gameplay / Experience (15)**|2|
+|**Replayability (10)**|0|
+|**Impact / Impression (10)**|0|
+|**Bonus / Surprise (5)**|0|
+||**7%**|
+
+> Note that I [overhauled my scoring criteria]({% post_url 2024-08-22-overhauling-my-scoring-criteria %}) in August of 2024, and the score above is the revised score for this game.
+> See below for the original score based on the original scoring criteria.
+{: .prompt-info }
 
 |**Atmosphere (20)**|3|
 |**Story (25)**|2|
