--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -70,7 +70,7 @@ The games list for this journey is available via [this Google Sheet](https://doc
 As I work through the list I'll link the reviews below. You can also find the reviews (in order of publication) under the ["Let's Adventure!"](https://www.alexbevi.com/categories/let-s-adventure/) category page or [sorted by score]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
 
 <hr>
-{%- assign games_finished = 86 -%}
+{%- assign games_finished = 87 -%}
 {%- assign games_skipped  = 13  -%}
 {%- assign games_total    = 363 -%}
 ```js
@@ -274,7 +274,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 184. Noctropolis (Flashpoint Productions) - 1994
 185. Plague of the Moon (Rebelsoft) - 1994
 186. Superhero League of Hoboken (Legend Entertainment) - 1994
-187. Under a Killing Moon (Access Software) - 1994
+187. [Under a Killing Moon (Access Software)]({% post_url 2024-09-20-under-a-killing-moon %}) - 1994
 188. Universe (Core Design) - 1994
 189. Dragonsphere (MicroProse) - 1994
 190. [Beneath a Steel Sky (Revolution Software)]({% post_url 2023-02-10-beneath-a-steel-sky %}) - 1994
