--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -70,7 +70,7 @@ The games list for this journey is available via [this Google Sheet](https://doc
 As I work through the list I'll link the reviews below. You can also find the reviews (in order of publication) under the ["Let's Adventure!"](https://www.alexbevi.com/categories/let-s-adventure/) category page or [sorted by score]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
 
 <hr>
-{%- assign games_finished = 87 -%}
+{%- assign games_finished = 88 -%}
 {%- assign games_skipped  = 13  -%}
 {%- assign games_total    = 363 -%}
 ```js
@@ -315,7 +315,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 225. [Full Throttle (LucasArts)]({% post_url 2023-03-10-full-throttle %}) - 1995
 226. Aliens: A Comic Book Adventure (Cryo Interactive) - 1995
 227. Star Trek: The Next Generation – A Final Unity (Spectrum HoloByte) - 1995
-228. Space Quest 6: The Spinal Frontier (Sierra On-Line) - 1995
+228. [Space Quest 6: The Spinal Frontier (Sierra On-Line)]({% post_url 2024-10-08-space-quest-6-the-spinal-frontier %}) - 1995
 229. Roberta Williams' Phantasmagoria (Sierra On-Line) - 1995
 230. [Beavis and Butt-Head in Virtual Stupidity (Viacom New Media)]({% post_url 2023-04-16-beavis-and-butthead %}) - 1995
 231. Scooby-Doo Mystery (The Illusions Gaming Company) - 1995
