--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -70,7 +70,7 @@ The games list for this journey is available via [this Google Sheet](https://doc
 As I work through the list I'll link the reviews below. You can also find the reviews (in order of publication) under the ["Let's Adventure!"](https://www.alexbevi.com/categories/let-s-adventure/) category page or [sorted by score]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
 
 <hr>
-{%- assign games_finished = 88 -%}
+{%- assign games_finished = 89 -%}
 {%- assign games_skipped  = 13  -%}
 {%- assign games_total    = 363 -%}
 ```js
@@ -196,7 +196,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 106. Dune (Cryo Interactive) - 1992
 107. [Eternam (Infogrames)]({% post_url 2023-02-07-eternam %}) - 1992
 108. Gobliins 2: The Prince Buffoon (Coktel Vision) - 1992
-109. Hook (Ocean) - 1992
+109. [Hook (Ocean)]({% post_url 2024-10-20-hook %}) - 1992
 110. Hugo III, Jungle of Doom! (Gray Design Associates) - 1992
 111. Inca (Coktel Vision) - 1992
 112. Inspector Gadget: Mission 1 - Global Terror! (Azeroth, Inc.) - 1992
