--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -70,7 +70,7 @@ The games list for this journey is available via [this Google Sheet](https://doc
 As I work through the list I'll link the reviews below. You can also find the reviews (in order of publication) under the ["Let's Adventure!"](https://www.alexbevi.com/categories/let-s-adventure/) category page or [sorted by score]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
 
 <hr>
-{%- assign games_finished = 89 -%}
+{%- assign games_finished = 90 -%}
 {%- assign games_skipped  = 13  -%}
 {%- assign games_total    = 363 -%}
 ```js
@@ -119,7 +119,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 29. [Tass Times in Tonetown (Interplay Productions, Brainwave Creations)]({% post_url 2023-12-27-tass-times-in-tonetown %}) - 1986
 30. [Uninvited (ICOM Simulations)]({% post_url 2023-08-09-uninvited %}) - 1986
 31. [Space Quest: The Sarien Encounter (Sierra On-Line)]({% post_url 2021-08-09-space-quest-the-sarien-encounter %}) - 1986
-32. King's Quest III: To Heir Is Human (Sierra On-Line) - 1986
+32. [King's Quest III: To Heir Is Human (Sierra On-Line)]({% post_url 2024-10-25-kings-quest-iii %}) - 1986
 33. ~~Suishō no Dragon (Square) - 1986~~ (_Japanese only, though a [fan translation](https://www.romhacking.net/translations/657/) exists_)
 34. ~~La Abadía del Crimen (The Abbey of Crime) (Opera Soft) - 1987~~ (_Spanish only_)
 35. Mortville Manor (Lankhor) - 1987
