--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -70,7 +70,7 @@ The games list for this journey is available via [this Google Sheet](https://doc
 As I work through the list I'll link the reviews below. You can also find the reviews (in order of publication) under the ["Let's Adventure!"](https://www.alexbevi.com/categories/let-s-adventure/) category page or [sorted by score]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
 
 <hr>
-{%- assign games_finished = 90 -%}
+{%- assign games_finished = 91 -%}
 {%- assign games_skipped  = 13  -%}
 {%- assign games_total    = 363 -%}
 ```js
@@ -206,7 +206,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 116. Linus Spacehead's Cosmic Crusade/Cosmic Spacehead (Codemasters (NES version), Supersonic Software) - 1992
 117. The Lost Files of Sherlock Holmes: The Case of the Serrated Scalpel (Mythos Software, Inc.) - 1992
 118. The Palace of Deceit: The Dragon's Plight (Game Syndicate Productions (Cliff Bleszinski)) - 1992
-119. Plan 9 from Outer Space (Gremlin Ireland) - 1992
+119. [Plan 9 from Outer Space (Gremlin Ireland)]({% post_url 2024-12-22-plan-9-from-outer-space %}) - 1992
 120. Putt-Putt Joins the Parade (Humongous Entertainment) - 1992
 121. Sherlock Holmes: Consulting Detective Vol. II (ICOM Simulations) - 1992
 122. [Ringworld: Revenge of the Patriarch (Tsunami Games)]({% post_url 2022-12-19-ringworld %}) - 1992
