--- a/_posts/2023-03-23-geisha.markdown
+++ b/_posts/2023-03-23-geisha.markdown
@@ -6,9 +6,9 @@ comments: true
 categories: ["Let's Adventure!"]
 tags: [adventure, "Coktel Vision", "Tomahawk", Gob]
 image: /images/adventure/geisha/scummvm-geisha-00001.png
+series: lets_adventure
 ---
-> This review is part of the ["Let's Adventure!"]({% post_url 2021-07-28-adventure-games-1980-1999 %}) series. See all reviewed games sorted by rating [here]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
-{: .prompt-info }
+{% series_nav %}
 
 > This game is terrible. Also the screenshots contain nudity ... which doesn't change the fact that this game sucks!
 {: .prompt-warning }
