--- a/_posts/2023-04-11-deja-vu.markdown
+++ b/_posts/2023-04-11-deja-vu.markdown
@@ -6,9 +6,9 @@ comments: true
 categories: ["Let's Adventure!"]
 tags: [adventure, "ICOM Simulations", "Mindscape", "Kemco", MacVenture]
 image: /images/adventure/dejavu/deja-vu-01.png
+series: lets_adventure
 ---
-> This review is part of the ["Let's Adventure!"]({% post_url 2021-07-28-adventure-games-1980-1999 %}) series. See all reviewed games sorted by rating [here]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
-{: .prompt-info }
+{% series_nav %}
 
 [Déjà Vu](https://en.wikipedia.org/wiki/D%C3%A9j%C3%A0_Vu_(video_game)) is a point-and-click adventure game set in the world of 1940s hardboiled detective novels and movies. It was released in 1985 for Macintosh – the first in the [MacVenture](https://en.wikipedia.org/wiki/MacVenture) series – and later ported to several other systems.
 
