--- a/_posts/2023-05-18-dreamweb.markdown
+++ b/_posts/2023-05-18-dreamweb.markdown
@@ -6,9 +6,9 @@ comments: true
 categories: ["Let's Adventure!"]
 tags: [adventure, "Creative Reality", "Empire", "Dreamweb"]
 image: /images/adventure/dreamweb/scummvm-dreamweb-cd-00000.png
+series: lets_adventure
 ---
-> This review is part of the ["Let's Adventure!"]({% post_url 2021-07-28-adventure-games-1980-1999 %}) series. See all reviewed games sorted by rating [here]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
-{: .prompt-info }
+{% series_nav %}
 
 [DreamWeb](https://en.wikipedia.org/wiki/DreamWeb) is an MS-DOS and Amiga point-and-click cyberpunk top-down adventure game released in 1994, developed by Creative Reality and published by Empire Interactive Entertainment. The game features mature themes and a dark plot filled with violence and brief full frontal nudity; a rarity for games at the time.
 
