--- a/_posts/2023-11-29-gateway.markdown
+++ b/_posts/2023-11-29-gateway.markdown
@@ -5,9 +5,9 @@ date: 2023-11-29 21:14:21 -0500
 comments: true
 tags: [adventure, "Legend Entertainment"]
 image: /images/adventure/gate/gate_000.png
+series: lets_adventure
 ---
-> This review is part of the ["Let's Adventure!"]({% post_url 2021-07-28-adventure-games-1980-1999 %}) series. See all reviewed games sorted by rating [here]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
-{: .prompt-info }
+{% series_nav %}
 
 [Frederik Pohl's Gateway](https://en.wikipedia.org/wiki/Gateway_(video_game)) is a 1992 interactive fiction video game released by Legend Entertainment, and written by Glen Dahlgren and Mike Verdu. It is based on Frederik Pohl's Heechee universe.
 
