--- a/_posts/2024-02-06-loom.markdown
+++ b/_posts/2024-02-06-loom.markdown
@@ -6,9 +6,9 @@ comments: true
 categories: ["Let's Adventure!"]
 tags: [adventure, "LucasArts", SCUMM]
 image: /images/adventure/loom/scummvm-loom-fm-00000.png
+series: lets_adventure
 ---
-> This review is part of the ["Let's Adventure!"]({% post_url 2021-07-28-adventure-games-1980-1999 %}) series. See all reviewed games sorted by rating [here]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
-{: .prompt-info }
+{% series_nav %}
 
 [Loom](https://en.wikipedia.org/wiki/Loom_(video_game)) is a 1990 fantasy-themed graphic adventure game by Lucasfilm Games. The project was led by Brian Moriarty, a former Infocom employee and author of classic text adventures Wishbringer (1985), Trinity (1986), and Beyond Zork (1987). It was the fourth game to use the SCUMM adventure game engine, and the first of those to avoid the verb–object interface introduced in Maniac Mansion.
 
