--- a/_posts/2024-02-28-ecoquest.markdown
+++ b/_posts/2024-02-28-ecoquest.markdown
@@ -6,9 +6,9 @@ comments: true
 categories: ["Let's Adventure!"]
 tags: [adventure, "Sierra On-Line", "SCI"]
 image: /images/adventure/eco1/scummvm-ecoquest-cd-00000.png
+series: lets_adventure
 ---
-> This review is part of the ["Let's Adventure!"]({% post_url 2021-07-28-adventure-games-1980-1999 %}) series. See all reviewed games sorted by rating [here]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
-{: .prompt-info }
+{% series_nav %}
 
 [EcoQuest: The Search for Cetus](https://en.wikipedia.org/wiki/EcoQuest:_The_Search_for_Cetus) is an educational adventure designed to teach about the importance of environmental ethics.
 
