--- a/_posts/2024-09-13-the-scoop.markdown
+++ b/_posts/2024-09-13-the-scoop.markdown
@@ -5,9 +5,9 @@ date: 2024-09-13 06:42:44 -0400
 comments: true
 tags: [adventure, "Telarium", "Spinnaker Software"]
 image: /images/adventure/scoop/scoop_000.png
+series: lets_adventure
 ---
-> This review is part of the ["Let's Adventure!"]({% post_url 2021-07-28-adventure-games-1980-1999 %}) series. See all reviewed games sorted by rating [here]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
-{: .prompt-info }
+{% series_nav %}
 
 [The Scoop](https://en.wikipedia.org/wiki/The_Scoop_(video_game)) is a mystery adventure game published by Telarium, a subsidiary of Spinnaker Software, in 1986 for Apple II and rereleased by Spinnaker Software in 1989 for DOS. The plot is based on the collaborative detective novel of the same name, written in 1931 by Agatha Christie, Dorothy L. Sayers, E. C. Bentley, Anthony Berkeley, Freeman Wills Crofts, and Clemence Dane.
 
