--- a/_posts/2024-10-20-hook.markdown
+++ b/_posts/2024-10-20-hook.markdown
@@ -6,9 +6,9 @@ comments: true
 categories: ["Let's Adventure!"]
 tags: [adventure, "Ocean", "played:Amiga"]
 image: /images/adventure/hook/019.png
+series: lets_adventure
 ---
-> This review is part of the ["Let's Adventure!"]({% post_url 2021-07-28-adventure-games-1980-1999 %}) series. See all reviewed games sorted by rating [here]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
-{: .prompt-info }
+{% series_nav %}
 
 There have been several video games based on the 1991 film [Hook](https://en.wikipedia.org/wiki/Hook_(video_game)). A side-scrolling platform game for the Nintendo Entertainment System (NES) and Game Boy was released in the United States in February 1992. Subsequent side-scrolling platform games were released for the Commodore 64 and the Super Nintendo Entertainment System (SNES), and an arcade beat ‘em up by Irem later in 1992, followed by versions for the Sega CD, Sega Genesis, and Sega's handheld Game Gear console in 1993.
 
