--- a/_posts/2025-02-02-universe.markdown
+++ b/_posts/2025-02-02-universe.markdown
@@ -6,9 +6,9 @@ comments: true
 categories: ["Let's Adventure!"]
 tags: [adventure, "Core Design", "played:Amiga"]
 image: /images/adventure/universe/001.png
+series: lets_adventure
 ---
-> This review is part of the ["Let's Adventure!"]({% post_url 2021-07-28-adventure-games-1980-1999 %}) series. See all reviewed games sorted by rating [here]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
-{: .prompt-info }
+{% series_nav %}
 
 [Universe](https://en.wikipedia.org/wiki/Universe_(1994_video_game)) is a graphic adventure game developed and published by Core Design for the Amiga, Amiga CD32 and DOS platforms in 1994. It was Core Design's second and last effort in the adventure game genre after Curse of Enchantia, of which it was originally planned to be a sequel.
 
