--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -59,7 +59,7 @@ The scoring we'll be using for this series will focus on the following:
 >
 > [5] **Bonus / Surprise**<br/>
 > Anything unexpected or notable that's worth calling out?
-{: .prompt-info }
+{: .prompt-warning }
 
 Each game will be ranked using the above, with the score represented as a percentage. Note that the first 84 games were originally scored using a different system. If you happen to be curious how this evolved, check out ["Overhauling My Scoring Criteria"]({% post_url 2024-08-22-overhauling-my-scoring-criteria %}) for more information.
 
@@ -88,16 +88,16 @@ As I work through the list I'll link the reviews below. You can also find the re
 > The list below was generated on July 28, 2021 and may have diverged from what is currently listed on Wikipedia
 {: .prompt-tip }
 
-1. [Mystery House (On-Line Systems)]({% post_url 2021-08-03-mystery-house %}) - 1980
-2. [Wizard and the Princess (On-Line Systems)]({% post_url 2022-12-30-wizard-and-the-princess %}) - 1980
-3. [Mission Asteroid (On-Line Systems)]({% post_url 2023-04-26-mission-asteroid %}) - 1980
+1. [Mystery House (On-Line Systems)]({% post_url 2021-08-03-mystery-house %}) - 1980 (`21%`)
+2. [Wizard and the Princess (On-Line Systems)]({% post_url 2022-12-30-wizard-and-the-princess %}) - 1980 (`23%`)
+3. [Mission Asteroid (On-Line Systems)]({% post_url 2023-04-26-mission-asteroid %}) - 1980 (`12%`)
 4. Cranston Manor (On-Line Systems) - 1981
-5. [Ulysses and the Golden Fleece (On-Line Systems)]({% post_url 2021-08-08-ulysses-and-the-golden-fleece %}) - 1981
-6. [Adventureland (Adventure International)]({% post_url 2023-10-24-adventureland %}) - 1982
-7. [Kabul Spy (Sirius Software)]({% post_url 2023-02-07-kabul-spy %}) - 1982
+5. [Ulysses and the Golden Fleece (On-Line Systems)]({% post_url 2021-08-08-ulysses-and-the-golden-fleece %}) - 1981 (`15%`)
+6. [Adventureland (Adventure International)]({% post_url 2023-10-24-adventureland %}) - 1982 (`13%`)
+7. [Kabul Spy (Sirius Software)]({% post_url 2023-02-07-kabul-spy %}) - 1982 (`14%`)
 8. Time Zone (On-Line Systems) - 1982
-9. [Transylvania (Penguin Software)]({% post_url 2021-08-24-transylvania %}) - 1982
-10. [The Dark Crystal (On-Line Systems)]({% post_url 2023-12-08-the-dark-crystal %}) - 1983
+9. [Transylvania (Penguin Software)]({% post_url 2021-08-24-transylvania %}) - 1982 (`22%`)
+10. [The Dark Crystal (On-Line Systems)]({% post_url 2023-12-08-the-dark-crystal %}) - 1983 (`28%`)
 11. ~~Star Arthur Legend: Planet Mephius (T&E Soft) - 1983~~ (_Japanese only_)
 12. ~~Portopia Renzoku Satsujin Jiken (Yuji Horii, Chunsoft) - 1983~~ (_Japanese only_)
 13. [Rendezvous with Rama (Telarium)]({% post_url 2023-10-07-rendezvous-with-rama %}) - 1984
