--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -70,7 +70,7 @@ The games list for this journey is available via [this Google Sheet](https://doc
 As I work through the list I'll link the reviews below. You can also find the reviews (in order of publication) under the ["Let's Adventure!"](https://www.alexbevi.com/categories/let-s-adventure/) category page or [sorted by score]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
 
 <hr>
-{%- assign games_finished = 100 -%}
+{%- assign games_finished = 101 -%}
 {%- assign games_skipped  = 13  -%}
 {%- assign games_total    = 363 -%}
 ```js
@@ -118,7 +118,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 28. [The Scoop (Telarium)]({% post_url 2024-09-13-the-scoop %}) - 1986
 29. [Tass Times in Tonetown (Interplay Productions, Brainwave Creations)]({% post_url 2023-12-27-tass-times-in-tonetown %}) - 1986
 30. [Uninvited (ICOM Simulations)]({% post_url 2023-08-09-uninvited %}) - 1986
-31. [Space Quest: The Sarien Encounter (Sierra On-Line)]({% post_url 2021-08-09-space-quest-the-sarien-encounter %}) - 1986
+31. [Space Quest: The Sarien Encounter (Sierra On-Line)]({% post_url 2021-08-09-space-quest-the-sarien-encounter %}) - 1986 (`52%`)
 32. [King's Quest III: To Heir Is Human (Sierra On-Line)]({% post_url 2024-10-25-kings-quest-iii %}) - 1986
 33. ~~Suishō no Dragon (Square) - 1986~~ (_Japanese only, though a [fan translation](https://www.romhacking.net/translations/657/) exists_)
 34. ~~La Abadía del Crimen (The Abbey of Crime) (Opera Soft) - 1987~~ (_Spanish only_)
@@ -185,7 +185,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 95. Timequest (Legend Entertainment) - 1991
 96. [Space Quest IV: Roger Wilco and the Time Rippers (Sierra On-Line)]({% post_url 2024-06-02-space-quest-iv-roger-wilco-and-the-time-rippers %}) - 1991
 97. ~~Metal Slader Glory (HAL Laboratory) - 1991~~ (_Japanese only, though a [fan translation](https://www.romhacking.net/translations/3755/) exists_)
-98. Leisure Suit Larry 5: Passionate Patti Does a Little Undercover Work (Sierra On-Line) - 1991
+98. [Leisure Suit Larry 5: Passionate Patti Does a Little Undercover Work (Sierra On-Line)]({% post_url 2025-11-28-leisure-suit-larry-5 %}) - 1991 (`55%`)
 99. Monkey Island 2: LeChuck's Revenge (LucasArts) - 1991
 100. Amazon: Guardians of Eden (Access Software) - 1992
 101. B.A.T. II – The Koshan Conspiracy (Computer's Dream) - 1992
