--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -70,7 +70,7 @@ The games list for this journey is available via [this Google Sheet](https://doc
 As I work through the list I'll link the reviews below. You can also find the reviews (in order of publication) under the ["Let's Adventure!"](https://www.alexbevi.com/categories/let-s-adventure/) category page or [sorted by score]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
 
 <hr>
-{%- assign games_finished = 101 -%}
+{%- assign games_finished = 102 -%}
 {%- assign games_skipped  = 13  -%}
 {%- assign games_total    = 363 -%}
 ```js
@@ -134,7 +134,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 44. Gold Rush! (Sierra On-Line) - 1988
 45. [Manhunter: New York (Evryware)]({% post_url 2023-02-18-manhunter-new-york %}) - 1988
 46. [Neuromancer (Interplay Productions)]({% post_url 2025-01-22-neuromancer %}) - 1988 (`64%`)
-47. King's Quest IV: The Perils of Rosella (Sierra On-Line) - 1988
+47. [King's Quest IV: The Perils of Rosella (Sierra On-Line)]({% post_url 2025-12-15-kings-quest-iv %}) - 1988 (`40%`)
 48. [Leisure Suit Larry Goes Looking for Love (in Several Wrong Places) (Sierra On-Line)]({% post_url 2023-02-01-leisure-suit-larry-2 %}) - 1988
 49. Zak McKracken and the Alien Mindbenders (Lucasfilm Games) - 1988
 50. [Police Quest II: The Vengeance (Sierra On-Line)]({% post_url 2023-02-21-police-quest-2 %}) - 1988 (`45%`)
